# Nmap Changelog ($Id$); -*-text-*-

o [Zenmap] Operating system icons are now always loaded as PNGs, even on
  platforms that support SVG images.  Loading PNGs was over ten times
  faster in some tests [Josh]

o There is a new default ping probe set: -PE -PS443 -PA80 -PP. In
  exhaustive testing of 90 different probes, this one emerged as the
  best four-probe combination, finding 14% more Internet hosts than
  the previous default, -PE -PA80. The default for nonroot users is
  -PS80,443, replacing the previous default of -PS80. In addition,
  ping probes are now sent in order of effectiveness (-PE first) so
  that less likely probes may not have to be sent. [David/Fyodor]

o Fixed a bug where an ICMP echo, timestamp, or address mask reply
  could be matched up with the wrong ICMP probe if more than one ICMP
  probe type was being sent (as with the new default ping). [David]

o [Zenmap] Fixed a crash, introduced in 4.85BETA4, that happened when
  searching scan results by date. [David] The error message was
      File "zenmapGUI\SearchGUI.pyo", line 816, in set_date
    TypeError: argument must be sequence of length 9, not 3

o Patched configure.ac to detect Lua include and library files in
  "lua5.1" subdirectories of /usr/include and the like. Apparently
  Debian puts them there. We still check the likes of
  /usr/include/lua.h and /usr/include/lua/lua.h as well. [Jan
  Christoph Nordholz]

o Fixed an assertion failure which could occur on at least SPARC Linux
  The error looked like "nsock_core.c:294: handle_connect_result:
  Assertion `0' failed. Aborted". [David Fifield, Fabio Pedretti]

o Improved the Oracle DB version detection signatures. [Tom Sellers]

o Updated nmap-mac-prefixes with the latest MAC address prefix data
  from http://standards.ieee.org/regauth/oui/oui.txt as of
  5/20/09. [Fyodor]

o [Ncat] Now Ncat can send a certificate in connect mode for client authentication